--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "streak-counter",
   "version": "1.0.0",
   "description": "A basic streak counter inspired by Duolingo",
-  "main": "index.js",
+  "type": "module",
+  "main": "index.ts",
   "scripts": {
     "tsc": "tsc",
     "test": "jest"
@@ -18,8 +19,15 @@
     "url": "https://github.com/Th3Wall/streak-counter/issues"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.16.7",
     "@types/jest": "^27.5.1",
+    "@types/jsdom": "^16.2.14",
+    "babel": "^6.23.0",
+    "babel-jest": "^28.1.0",
     "jest": "^28.1.0",
+    "jsdom": "^19.0.0",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   }
