--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "streak-counter",
-  "version": "1.0.0",
+  "name": "@th3wall/streak-counter",
   "description": "A basic streak counter inspired by Duolingo",
-  "type": "module",
-  "main": "index.ts",
-  "scripts": {
-    "tsc": "tsc",
-    "test": "jest"
-  },
-  "author": "Th3Wall",
-  "license": "MIT",
-  "homepage": "https://github.com/Th3Wall/streak-counter#readme",
+  "version": "1.0.0",
+  "author": "Davide Mandelli | Th3Wall <mandellidavide.95@gmail.com>",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Th3Wall/streak-counter.git"
   },
-  "bugs": {
-    "url": "https://github.com/Th3Wall/streak-counter/issues"
+  "license": "MIT",
+  "type": "module",
+  "types": "./dist/index.d.ts",
+  "source": "src/index.ts",
+  "exports": {
+    "require": "./dist/index.cjs",
+    "default": "./dist/index.modern.js"
+  },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.module.js",
+  "unpkg": "./dist/index.umd.js",
+  "scripts": {
+    "build": "microbundle",
+    "dev": "microbundle watch",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
@@ -28,6 +33,7 @@
     "babel-jest": "^28.1.0",
     "jest": "^28.1.0",
     "jsdom": "^19.0.0",
+    "microbundle": "^0.15.0",
     "ts-jest": "^28.0.2",
     "typescript": "^4.6.4"
   }
